--- a/task/src/main/resources/application.yml
+++ b/task/src/main/resources/application.yml
@@ -11,8 +11,13 @@ spring:
     driver-class-name: org.h2.Driver
     username: root
     password: root
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 server:
   port: 8082
+
 
 
 
