--- a/task/src/main/resources/application.yml
+++ b/task/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
 server:
   port: 8082
 
+springdoc:
+  api-docs:
+    path: /api-docs
+
 variables:
   jwt-secret: "GSuovz7BIEJLvLCKwfhghwx8tHfK3ee4L2K9/VPHQhI="
   internal-secret: "w6YT3S43OL80iP67Fu2WjC3fXD1NPQYe"
