--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       ddl-auto: create-drop
     show-sql: true
   datasource:
-    url: jdbc:h2:file:./task/taskDb
+    url: jdbc:h2:file:./taskDb
     driver-class-name: org.h2.Driver
     username: root
     password: root
