--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
-  h2:
-    console.enabled: false
+  application:
+    name: TaskManager-task-service
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
@@ -17,10 +17,17 @@ spring:
       max-request-size: 10MB
 server:
   port: 8082
+  servlet:
+    context-path: /v1/api/task
 
 springdoc:
   api-docs:
     path: /api-docs
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8083/eureka
 
 variables:
   jwt-secret: "GSuovz7BIEJLvLCKwfhghwx8tHfK3ee4L2K9/VPHQhI="
