--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+
 server:
   port: 8082
   servlet:
@@ -32,8 +33,4 @@ eureka:
 variables:
   jwt-secret: "GSuovz7BIEJLvLCKwfhghwx8tHfK3ee4L2K9/VPHQhI="
   internal-secret: "w6YT3S43OL80iP67Fu2WjC3fXD1NPQYe"
-  auth-uri: "http://localhost:8081/api/"
-
-
-
-
+  auth-uri: "http://localhost:8081/v1/api/user/"
